@@ -21,7 +21,8 @@ disks (sg_start); do self tests (sg_senddiag); and various other functions.
 See the README, ChangeLog and COVERAGE files. Requires the linux kernel 2.4
 series or later. In the 2.4 series SCSI generic device names (e.g. /dev/sg0)
 must be used. In the 2.6 series and later other device names may be used as
-well (e.g. /dev/sda).
+well (e.g. /dev/sda). Also some support for NVMe devices, esspecially with
+sg_ses to NVMe enclosures.
 
 Warning: Some of these tools access the internals of your system
 and the incorrect usage of them may render your system inoperable.
@@ -79,7 +80,7 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Sat Jun 02 2018 - dgilbert at interlog dot com
+* Fri Jun 13 2018 - dgilbert at interlog dot com
 - track t10 changes
   * sg3_utils-1.43
 
