@@ -2,7 +2,7 @@ sg3-utils (1.43-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 02 Jun 2018 13:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 15 Jun 2018 12:00:00 -0400
 
 sg3-utils (1.42-0.1) unstable; urgency=low
 
